The alignment and positioning of tags on main page has been fixed.

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -297,3 +297,7 @@ input,
 .ant-menu-submenu::after {
     border: none !important;
 }
+.ant-card-body {
+    height: 100%;
+    padding: 0 !important;
+}
